[package]
name = "ftl"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2021"

[features]
default = ["json"]
json = ["serde_json", "v_jsonescape"]
msgpack = ["rmp-serde"]

[dependencies]
tokio = { version = "1.4", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1.50"
hyper = { version = "0.14.4", features = ["http1", "http2", "server", "stream", "runtime"] }
tokio-tungstenite = "0.17"
http = "0.2.3"
async-compression = { version = "0.3.7", features = ["brotli", "deflate", "gzip", "tokio"] }
multipart = { version = "0.18.0", default-features = false, features = ["server"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
percent-encoding = "2.1"
mime = "0.3.16"
mime_guess = "2.0.3"
url = "2.2.0"
futures = "0.3"
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
thiserror = "1.0.23"
bytes = "1.0.1"
pin-project-lite = "0.2.8"

either = { version = "1.6.0", optional = true }

v_jsonescape = { version = "0.6", optional = true }
serde_json = { version = "1", optional = true }
rmp-serde = { version = "1", optional = true }

[dependencies.headers]
version = "0.3"

[patch.crates-io]
headers = { git = "https://github.com/novacrazy/headers" }