[package]
name = "ftl"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2021"

[features]
default = ["json", "cbor"]
json = ["serde_json", "v_jsonescape"]
cbor = ["ciborium"]
brotli = ["async-compression/brotli"]

[dependencies]
tokio = { version = "1.4", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1.14"

hyper = { version = "1", features = ["http1", "http2", "server"] }
tokio-tungstenite = "0.23"
http = "1"
hyper-util = { version = "0.1.2", features = ["tokio"] }
http-body-util = "0.1.0"

async-compression = { version = "0.4", features = ["deflate", "gzip", "tokio"] }
multipart = { optional = true, version = "0.18.0", default-features = false, features = ["server"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
percent-encoding = "2.1"
mime = "0.3.16"
mime_guess = "2.0.3"
url = "2.2.0"
futures = "0.3"
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
thiserror = "1.0.23"
bytes = "1.0.1"
pin-project-lite = "0.2.8"
lazy_static = "1.4.0"
scc = "2.0"

either = { version = "1.6.0", optional = true }

v_jsonescape = { version = "0.7", optional = true }
serde_json = { version = "1", optional = true }
ciborium = { version = "0.2", optional = true }
pin-project = "1.1.3"

[dependencies.headers]
version = "0.4"

[patch.crates-io]
headers = { git = "https://github.com/novacrazy/headers" }
